🚀 Multi-AZ architecture ready for AWS deployment

--- a/ubuntu-frontend/all-guides.html
+++ b/ubuntu-frontend/all-guides.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Vetted Guides — Ubuntu Travels</title>
+    
+    <!-- Ubuntu Travels Branding System -->
+    <script src="./assets/js/brand-init.js"></script>
     
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="./assets/css/style.css">
