--- a/ubuntu-frontend/country.html
+++ b/ubuntu-frontend/country.html
@@ -40,7 +40,7 @@
             </ul>
 
             <div style="display: flex; gap: 12px; align-items: center;">
-                <a href="./plan-trip.html" class="btn btn-primary" style="background: var(--white-1); color: var(--viridian-green); border: 2px solid var(--viridian-green); font-weight: 600; display: flex; align-items: center; gap: 6px;">
+                <a href="./plan-trip.html" class="btn-plan-trip">
                     <ion-icon name="map-outline" style="font-size:18px;"></ion-icon>
                     Plan Your Trip
                 </a>
