--- a/ubuntu-frontend/admin.html
+++ b/ubuntu-frontend/admin.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin Dashboard — Ubuntu Travels</title>
+    
+    <!-- Ubuntu Travels Branding System -->
+    <script src="./assets/js/brand-init.js"></script>
     
     <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="./assets/css/style.css">
