--- a/ubuntu-frontend/index.html
+++ b/ubuntu-frontend/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ubuntu Travels - Explore East Africa</title>
+  
+  <!-- Ubuntu Travels Branding System -->
+  <script src="./assets/js/brand-init.js"></script>
 
   <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="./assets/css/style.css?v=4">
@@ -45,7 +47,7 @@
 
       <div style="display: flex; gap: 12px; align-items: center;">
         <!-- Plan Your Trip Button -->
-        <a href="./plan-trip.html" class="btn btn-primary" style="background: var(--white-1); color: var(--viridian-green); border: 2px solid var(--viridian-green); font-weight: 600; display: flex; align-items: center; gap: 6px;">
+        <a href="./plan-trip.html" class="btn-plan-trip">
           <ion-icon name="map-outline" style="font-size:18px;"></ion-icon>
           Plan Your Trip
         </a>
@@ -128,7 +130,7 @@
               </figure>
               <div class="card-content">
                 <p class="card-subtitle">Country</p>
-                <h3 class="h3 card-title">Uganda</h3>
+                <h3 class="h3 card-title">Ouganda</h3>
               </div>
             </a>
           </li>
