--- a/ubuntu-frontend/tours.html
+++ b/ubuntu-frontend/tours.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ubuntu Travels | Tours</title>
+    
+    <!-- Ubuntu Travels Branding System -->
+    <script src="./assets/js/brand-init.js"></script>
 
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/tours-wireframe.css?v=1" />
@@ -34,7 +36,7 @@
             </ul>
 
             <div style="display: flex; gap: 12px; align-items: center;">
-                <a href="./plan-trip.html" class="btn btn-primary" style="background: var(--white-1); color: var(--viridian-green); border: 2px solid var(--viridian-green); font-weight: 600; display: flex; align-items: center; gap: 6px;">
+                <a href="./plan-trip.html" class="btn-plan-trip">
                     <ion-icon name="map-outline" style="font-size:18px;"></ion-icon>
                     Plan Your Trip
                 </a>
